src/index.css
/* ... */
.phonConturyWrap .PhoneInputCountrySelect:focus + .PhoneInputCountryIcon + .PhoneInputCountrySelectArrow{
  color: #232323;
}


/* new country npm css */

.phonConturyWrap{
  position: relative;
  z-index: 99;
}

.phonConturyWrap .react-tel-input .form-control{
  height: 55px;
  width: 100%;
  padding-left: 80px;
}

.HRFormPhoneNo {
  z-index: 0 !important;
}

.HRFormPhoneNo .react-tel-input .form-control{
  border-radius: 20px !important;
  height: 33px !important;
  background: #EFEFEF4D;
}

.previewHRPhoneNoField .react-tel-input .form-control{
  border-radius: 20px !important;
  height: 33px !important;

}

.phonConturyWrap .react-tel-input::after{
  content: "";
  position: absolute;
  top: 0;
  left: 66px;
  width: 1px;
  height: 100%;
  background: #CACACA;
}

.phonConturyWrap .react-tel-input .flag-dropdown{
  background-color: transparent;
  border: 0px;
  padding-left: 12px;
}

.phonConturyWrap .react-tel-input .selected-flag:hover, .phonConturyWrap .react-tel-input .selected-flag:focus, .phonConturyWrap .react-tel-input .flag-dropdown.open .selected-flag, .phonConturyWrap .react-tel-input .flag-dropdown.open{
  background-color: transparent;
  background: transparent;
}

.phonConturyWrap .react-tel-input .selected-flag .arrow{
  box-sizing: border-box;
  height: 8px;
  width: 8px;
  border-style: solid;
  border-color: black;
  border-width: 0px 1px 1px 0px;
  transform: rotate(45deg);
  transition: border-width 150ms ease-in-out;
  margin-top: -6px;
  left: 28px;
}

.phonConturyWrap .react-tel-input .selected-flag .arrow.up{
  border-bottom: 1px solid black;
}


/* Responsive css start */

@media only screen and (max-width: 1440px) {
  .mainWrapper {
    padding-top: 64px;
  }

  .ant-tabs-top .ant-tabs-tab{
    font-size: 16px;
    line-height: 20px;
  }

  .ant-tabs-tab .ant-tabs-tab-btn{
    font-size: var(--fontsize-brittle) !important;
  }

  .ant-table-thead > tr > th {
    font-size: 11px;
    padding-left: 8px !important;
    padding-right: 8px !important;
  }

  .ant-table-tbody > tr > td{
    padding: 10px 8px !important;
    font-size: 11px;
  }

  .ant-radio-group .ant-radio-wrapper{
    font-size: 12px;
    padding-left: 24px;
    margin: 0 10px 0 0;
  }

  .ant-radio-group .ant-radio-wrapper:nth-child:last-child{
    margin: 0px;
  }

  .ant-table-body{
    max-height: calc(100vh - 322px) !important;
  }

  .telentDetailBtn{
    font-size: 12px !important;
    padding: 5px 8px !important;
  }

  .ant-table-pagination-right {
    margin-top: 16px !important;
  }

  .ant-table-pagination-right .ant-pagination-total-text{
    font-size: 12px;
  }

  .ant-pagination.ant-pagination-mini .ant-pagination-item{
    font-size: 12px;
    min-width: 22px;
    height: 22px;
  }

  .ant-pagination .ant-select-selector .ant-select-selection-item{
    font-size: 12px;
    padding-right: 26px !important;
  }

  [class*="react-datepicker-popper"]{
    z-index: 9999 !important;
  }


  [class*="filterRight"] .ant-select-multiple .ant-select-selector{
    padding-top: 5px;
    padding-bottom: 5px; 
    height: auto;
    min-height: 35px;
    font-size: 12px;
    overflow-y: auto;
    max-height: 40px;
  }
  
  [class*="filterRight"] .ant-select .ant-select-selector .ant-select-selection-placeholder{
    font-size: 10px;
  }
}


@media only screen and (max-width: 1340px) {
  [class*="FeedbackDatedetail"] .ant-radio-group .ant-radio-wrapper {
      font-size: 10px;
      padding-left: 20px;
      margin: 0 5px 0 0;
      /* width: 70px; */
      line-height: 12px;  
  }

  [class*="FeedbackDatedetail"] .ant-radio-group .ant-radio-wrapper .ant-radio .ant-radio-inner {
    width: 15px;
    height: 15px;
  }

  [class*="FeedbackDatedetail"] .ant-radio-group .ant-radio-wrapper .ant-radio{
    top: 1px;
  }

 


  /* .ant-table-thead > tr > th{
    white-space: nowrap;
  } */
  /* .ant-table-tbody > tr > td{
    white-space: nowrap;
  } */

  .telentDetailBtn{
      font-size: 10px !important;
      padding: 5px 8px !important;
  }



}

/* Responsive css End */


/* for JD CSS and HTML */

.jobDescritionCSS div, .jobDescritionCSS span{
  width: auto !important;
  height: auto !important;
  font-family: Montserrat,sans-serif!important;
  font-size: 14px !important;
  line-height: 18px !important;
  position: initial !important;

}

.RolesResponsibilitiesDetail .jobDescritionCSS div, .RolesResponsibilitiesDetail .jobDescritionCSS span{
  font-family: Montserrat,sans-serif!important;
}

img{
  max-width: 100%;
}

.customPlaceHolder {
  position: relative;
}

.customPlaceHolder .placeHolderText {
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 500;
  line-height: 17px;
  color: rgba(107, 107, 107, 0.4);
  position: absolute;
  top: 59px;
  left: 17px;
  right: 17px;
  bottom: 16px;
}

.customPlaceHolder .placeHolderText p,.formFields .customPlaceHolder .placeHolderText p {
  color: inherit;
  font-size: inherit;
  line-height: inherit;
  margin: 0;
}

.customPlaceHolder .placeHolderText ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.customPlaceHolder .placeHolderText ul li {
  position: relative;
  padding-left: 13px;
}

.customPlaceHolder .placeHolderText ul li:before {
  content: '';
  background: rgba(107, 107, 107, 0.4);
  width: 3px;
  height: 3px;
  display: inline-block;
  border-radius: 20px;
  position: absolute;
  top: 7px;
  left: 2px;
}
 .preShareDetailsBox {
  gap: 24px;
  margin-top: 24px;
  flex-wrap: wrap;
  display: flex;
}

 .preShareDetailsBox .preShareDetailsItem {
  width: calc(50% - 12px);
  padding: 24px;
  border-radius: 16px;
  border: 1px solid rgba(35, 35, 35, 0.2);
  display: flex;
  word-break: break-word;
  position: relative;
  align-items: center;
  background: #FFF;
}

 .preShareDetailsBox .preShareDetailsItem .thumbImages {
  width: 75px;
  min-width: 75px;
  height: 75px;
  font-weight: 600;
  border-radius: 80px;
}
/* ... */

